--- a/html/faleConosco.html
+++ b/html/faleConosco.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fale Conosco</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <nav>
         <a href="index.html">Home</a>
-        <a href="sobreNos.html">Sobre</a>
-        <a href="faleConosco.html">Fale Conosco</a>
+        <a href="html/sobreNos.html">Sobre</a>
+        <a href="html/faleConosco.html">Fale Conosco</a>
+        <a href="html/facaseupedido.html">Faça seu pedido!</a>
     </nav>
 
     <section>
@@ -24,7 +25,7 @@
         <div id="mensagemEnviada"></div>
     </section>
 
-    <script src="formulario.js"></script>
+    <script src="..js/formulario.js"></script>
     <footer>
     <p>&copy; 2025 Cafeteria Sabor & Aroma - Todos os direitos reservados.</p>
     <p>Endereço: Rua Heitor Lacerda Guedes, 1000 -  Cidade Satélite Iris</p>
