--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <nav>
         <a href="index.html">Home</a>
-        <a href="sobreNos.html">Sobre</a>
-        <a href="faleConosco.html">Fale Conosco</a>
+        <a href="html/sobreNos.html">Sobre</a>
+        <a href="html/faleConosco.html">Fale Conosco</a>
+        <a href="html/facaseupedido.html">Faça seu pedido!</a>
     </nav>
 
     <header>
@@ -23,7 +24,7 @@
         <button id="next">❯</button>
     </section>
 
-    <script src="cafeteria.js"></script>
+    <script src="..js/cafeteria.js"></script>
 
     <footer>
     <p>&copy; 2025 Cafeteria Sabor & Aroma - Todos os direitos reservados.</p>
