--- a/html/sobreNos.html
+++ b/html/sobreNos.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Nós</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <nav>
         <a href="index.html">Home</a>
-        <a href="sobreNos.html">Sobre</a>
-        <a href="faleConosco.html">Fale Conosco</a>
+        <a href="html/sobreNos.html">Sobre</a>
+        <a href="html/faleConosco.html">Fale Conosco</a>
+        <a href="html/facaseupedido.html">Faça seu pedido!</a>
     </nav>
 
     <section>
