--- a/html/facaseupedido.html
+++ b/html/facaseupedido.html
@@ -9,9 +9,9 @@
 <body>
     <nav>
         <a href="index.html">Home</a>
-        <a href="html/sobreNos.html">Sobre</a>
-        <a href="html/faleConosco.html">Fale Conosco</a>
-        <a href="html/facaseupedido.html">Faça seu pedido!</a>
+        <a href="../html/sobreNos.html">Sobre</a>
+        <a href="../html/faleConosco.html">Fale Conosco</a>
+        <a href="../html/facaseupedido.html">Faça seu pedido!</a>
     </nav>
     <h2>📋 Faça seu pedido</h2>
 <form id= "formulario-pedido" action="https://formsubmit.co/backupcaio55@gmail.com" method="POST">
