--- a/html/sobreNos.html
+++ b/html/sobreNos.html
@@ -9,9 +9,9 @@
 <body>
     <nav>
         <a href="index.html">Home</a>
-        <a href="html/sobreNos.html">Sobre</a>
-        <a href="html/faleConosco.html">Fale Conosco</a>
-        <a href="html/facaseupedido.html">Faça seu pedido!</a>
+        <a href="../html/sobreNos.html">Sobre</a>
+        <a href="../html/faleConosco.html">Fale Conosco</a>
+        <a href="../html/facaseupedido.html">Faça seu pedido!</a>
     </nav>
 
     <section>
