--- a/html/faleConosco.html
+++ b/html/faleConosco.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="../html/sobreNos.html">Sobre</a>
-        <a href="../html/faleConosco.html">Fale Conosco</a>
-        <a href="../html/facaseupedido.html">Faça seu pedido!</a>
+        <a href="../index.html">Home</a>
+        <a href="/cafe.jpg">Sobre</a>
+        <a href="/faleConosco.html">Fale Conosco</a>
+        <a href="/facaseupedido.html">Faça seu pedido!</a>
     </nav>
 
     <section>
