--- a/html/faleConosco.html
+++ b/html/faleConosco.html
@@ -9,9 +9,9 @@
 <body>
     <nav>
         <a href="../index.html">Home</a>
-        <a href="/cafe.jpg">Sobre</a>
-        <a href="/faleConosco.html">Fale Conosco</a>
-        <a href="/facaseupedido.html">Faça seu pedido!</a>
+        <a href="cafe.jpg">Sobre</a>
+        <a href="faleConosco.html">Fale Conosco</a>
+        <a href="facaseupedido.html">Faça seu pedido!</a>
     </nav>
 
     <section>
