--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="..TestCafeteria/html/sobreNos.html">Sobre</a>
-        <a href="..TestCafeteria/html/faleConosco.html">Fale Conosco</a>
-        <a href="..TestCafeteria/html/facaseupedido.html">Faça seu pedido!</a>
-    </nav>
+  <a href="./">Home</a>
+  <a href="html/sobreNos.html">Sobre</a>
+  <a href="html/faleConosco.html">Fale Conosco</a>
+  <a href="html/facaseupedido.html">Faça seu pedido!</a>
+</nav>
 
     <header>
         <h1>Bem-vindo à  Cafeteria Sabor & Aroma</h1>
@@ -24,7 +24,7 @@
         <button id="next">❯</button>
     </section>
 
-    <script src="..js/cafeteria.js"></script>
+    <script src="js/cafeteria.js"></script>
 
     <footer>
     <p>&copy; 2025 Cafeteria Sabor & Aroma - Todos os direitos reservados.</p>
