--- a/html/faleConosco.html
+++ b/html/faleConosco.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <a href="../index.html">Home</a>
-        <a href="cafe.jpg">Sobre</a>
+        <a href="sobreNos.html">Sobre</a>
         <a href="faleConosco.html">Fale Conosco</a>
         <a href="facaseupedido.html">Faça seu pedido!</a>
     </nav>
